# routes/movieRoute.js
@@ -20,6 +20,7 @@ router.post("/add_movie/delete/:id", imageHelper.uploadMovieImages, movieControl
 
 // APIs
 router.get("/api/movies", movieController.moviesAPI);
+router.get("/api/home", movieController.homeAPI);
 
 
 module.exports = router;
